[package]
name = "ppa"
version = "0.1.0"
authors = ["m-lange <martin_lange_@gmx.net>"]
edition = "2018"

[lib]
crate-type = ["rlib", "cdylib"]
name = "ppa"
path = "src/lib.rs"

[[bin]]
name = "ppa"
path = "src/main.rs"

[dependencies]
num-traits = "0.2.11"
structopt = {version = "0.3", features = ["wrap_help"]} # TODO put CLI in feature
